[package]
name = "adv"
version = "0.1.0"
edition = "2021"
authors = ["Griffin Evans <griffinevans@protonmail.com>"]
license = "MIT"
description = "Dispense short programming aphorisms in the style of Unix fortune"
readme = "README.md"
homepage = "https://github.com/griffinevans/adv"
repository = "https://github.com/griffinevans/adv"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
